<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="notification"
        android:summary="@string/settings_notification_summary"
        android:title="@string/settings_notification_title" />

    <ListPreference
        android:defaultValue="3600000"
        android:dialogTitle="@string/settings_notification_interval_dialog_title"
        android:entries="@array/Intervall"
        android:entryValues="@array/Intervall_values"
        android:key="AbrufIntervall"
        android:negativeButtonText="@string/settings_notification_interval_dialog_back"
        android:persistent="true"
        android:summary="@string/settings_notification_interval_summary"
        android:title="@string/settings_notification_interval_title" />

</PreferenceScreen>
