<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/infoTitle"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/action_feedback"/>
    
    <item
        android:id="@+id/action_webview"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/action_website"/>

</menu>
