<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="1"
        android:title="@string/action_share_title" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="2"
        android:title="@string/infoTitle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="4"
        android:title="@string/action_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_website"
        android:orderInCategory="5"
        android:title="@string/action_website"
        app:showAsAction="never" />

</menu>
